<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search" translatable="true">Поиск</string>
    <string name="library" translatable="true">Медиатека</string>
    <string name="settings" translatable="true">Настройки</string>
    <string name="dark_theme" translatable="true">Темная тема</string>
    <string name="share_app" translatable="true">Поделиться приложением</string>
    <string name="support" translatable="true">Написать в поддержку</string>
    <string name="agreement" translatable="true">Пользовательское соглашение</string>
    <string name="settings_share_title" translatable="false">Выберите мессенджер</string>
    <string name="settings_share_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="settings_support_mailto" translatable="false">mailto:</string>
    <string name="settings_support_email" translatable="false">s.rubinets@gmail.com</string>
    <string name="settings_support_subject" translatable="true">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_message" translatable="true">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_update">Обновить</string>
    <string name="search_error_nothing_found">Ничего не нашлось</string>
    <string name="search_error_network">Проблемы со связью</string>
    <string name="search_error_network_extra">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_track_progress">"00:00"</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="play_or_pause">Играть/приостановить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="back">Назад</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="error">Произошла ошибка</string>
    <string name="no_demo_for_this_track">Для этого трека нет демо</string>
    <string name="favorites">Избранные треки"</string>
    <string name="playlists">Плейлисты"</string>
    <string name="your_library_is_empty">Ваша медиатека пуста</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="there_are_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="clear_input">Очистить введённые данные</string>
    <string name="search_field">Поиск</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="Title">Название *</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="q_close_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="close">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="quantity_of_tracks_template">%1$d трек%2$s</string>
    <string name="total_duration_template">%1$d минут%2$s</string>
    <string name="success_added_to_playlist_template">Добавлено в плейлист %1$s</string>
    <string name="track_is_already_added_to_playlist_template">Трек уже добавлен в плейлист %1$s</string>
    <string name="there_are_no_tracks">В этом плейлисте пока нет треков</string>
    <string name="zero_minutes">0 минут</string>
    <string name="delete_track">Удалить трек</string>
    <string name="q_sure_u_want_to_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="playlist">Плейлист: %1$s</string>
    <string name="q_want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_created_success">Плейлист %1$s успешно создан</string>
</resources>