<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_settings_screen"
    style="@style/ParentVerticalLayoutStyle"
    tools:context="com.playlistmaker.ui.settings.SettingsFragment"
    tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_toolbar_layout_height_56"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:title="@string/settings"
        app:titleTextAppearance="@style/HeadToolbarTextStyle" />


    <Switch
        android:id="@+id/sw_dark_theme"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_size_64"
        android:layout_gravity="start"
        android:layout_marginEnd="0dp"
        android:text="@string/dark_theme"
        android:textAlignment="viewStart"
        app:thumbTint="@color/grey"
        app:trackDecorationTint="@android:color/transparent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <TextView
        android:id="@+id/tv_share"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_size_64"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share_light_mode" />


    <TextView
        android:id="@+id/tv_support"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_size_64"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support_light_mode" />


    <TextView
        android:id="@+id/tv_agreement"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_row_size_64"
        android:text="@string/agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_light_mode" />


</LinearLayout>
