<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_ll_screen"
    style="@style/ParentVerticalLayoutStyle"
    tools:context="com.playlistmaker.ui.library.playlists.PlaylistsFragment"
    tools:ignore="MissingConstraints">

    <Button
        android:id="@+id/bt_create_playlist"
        style="@style/PlaceholderButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_error_hor_margin_24"
        android:text="@string/create_playlist"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/ll_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/placeholder_margin_48"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_placeholder_image"
            android:layout_width="@dimen/placeholder_img_120"
            android:layout_height="wrap_content"
            android:contentDescription="@string/your_library_is_empty"
            android:src="@drawable/ic_nothing_found" />

        <TextView
            android:id="@+id/tv_placeholder_message"
            style="@style/PlaceholderMessageTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/search_error_hor_margin_24"
            android:layout_marginTop="@dimen/standart_padding_16"
            android:lines="2"
            android:text="@string/there_are_no_playlists" />


    </LinearLayout>
</LinearLayout>