<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        android:gravity="start"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size_26" />

    <LinearLayout
        android:id="@+id/ll_menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="@dimen/standart_padding_16">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size_26"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search_light_mode"
            app:iconGravity="textStart"
            app:iconSize="@dimen/standart_icon_size_24"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size_26"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_library_light_mode"
            app:iconGravity="textStart"
            app:iconSize="@dimen/standart_icon_size_24"
            app:iconTint="@color/black" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size_26"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings_light_mode"
            app:iconGravity="textStart"
            app:iconSize="@dimen/standart_icon_size_24"
            app:iconTint="@color/black" />


    </LinearLayout>
</LinearLayout>

